# journald-broker

./: .kateproject  00-global-settings.conf  00-template.conf  COPYING  Cargo.toml  Justfile  LICENSE  PKGBUILD.aur  PKGBUILD.local  README.adoc  journald-broker.service  journald-broker.toml
.github/workflows/: rust-clippy.yml  rust.yml
docs/: Justfile  journald-broker-seq.plantuml
src/: args.rs  launcher.rs  lib.rs  main.rs  monitor.rs  script.rs  settings.rs
tests/: run-script-no-timeout-1.rs  run-script-no-timeout-2.rs  run-script-no-timeout-3.rs  run-script-no-timeout-4.rs  run-script-no-timeout-5.rs  run-script-timeout-1.rs  run-script-timeout-2.rs  run-script-timeout-3.rs  run-script-timeout-4.rs  run-script-timeout-5.rs  run-script-timeout-6.rs  settings-1.conf  settings-2.conf  settings-3.conf  settings-4.toml  settings-5.conf
tests/common/: log_check.rs  mod.rs
tests/scripts/: script-execute-test.sh
tests/test-1/: Justfile  echo-log.sh  echo-log.toml
