[package]
name = "journald-broker"
version = "0.5.0"

authors = ["Bhanupong Petchlert <bpetlert@gmail.com>"]

description = "A log-based event dispatcher daemon for systemd's journal"
documentation = "https://github.com/bpetlert/journald-broker"
homepage = "https://github.com/bpetlert/journald-broker"
license = "GPL-3.0-or-later"
readme = "README.adoc"
repository = "https://github.com/bpetlert/journald-broker"

edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
humantime-serde = "1.1.1"
mimalloc = "0.1.37"
once_cell = "1.18.0"
regex = "1.8.4"
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
systemd = { version = "0.10.0", default-features = false, features = [
    "journal",
] }
tracing = { version = "0.1.37", features = [
    "max_level_debug",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
] }
wait-timeout = "0.2.0"

[dev-dependencies]
tempfile = "3.6.0"
